dev/test_programs/INVALID/group1/exp14.go
package main

func main(){
	var slice []int;
	slice = append(4, 5);
}
